# ROB_ROS2

./: .gitignore  README copy.md  README.md  running the stuff.txt
.git copy/: COMMIT_EDITMSG  FETCH_HEAD  HEAD  config  index  packed-refs
.git copy/logs/: HEAD
.git copy/logs/refs/heads/: comp-testing  main
.git copy/logs/refs/remotes/origin/: comp-testing  main
.git copy/objects/pack/: pack-78dd0e1aa77aff27ca94289029e8410e860b2efa.idx  pack-78dd0e1aa77aff27ca94289029e8410e860b2efa.rev
.git copy/refs/heads/: comp-testing  main
.git copy/refs/remotes/origin/: main
Package_Maker_Program/: Package_Maker.py
ROS2_Docker/: Dockerfile  instructions.md
ROS2_setup_resources/: Linux_ROS2_installer.sh
src/minirob_auto/: package.xml  setup.cfg  setup.py
src/minirob_auto/launch/: minirob_auto.launch.py
src/minirob_auto/minirob_auto/: auto_control_node.py  lane_detection_node.py  lane_traversal_node.py
src/pi_teensy_udp/: README.md  package.xml  setup.cfg  setup.py
src/pi_teensy_udp/launch/: pi_teensy_udp.launch.py
src/pi_teensy_udp/pi_teensy_udp/: pseudo_auto_mode.py  udp_receiver.py  udp_sender.py
src/pub_sub_demo/: README.md  package.xml  setup.cfg  setup.py
src/pub_sub_demo/launch/: pub_sub_demo.launch.py
src/pub_sub_demo/pub_sub_demo/: listener.py  talker.py
src/system_msgs/: CMakeLists.txt  package.xml
src/system_msgs/msg/: TeensyTelemetry.msg
src/video_recorder/: package.xml  setup.cfg  setup.py
src/video_recorder/launch/: video_recorder.launch.py
src/video_recorder/recordings/: README.md
src/video_recorder/video_recorder/: frame_annotator_node.py  video_recorder_node.py
