<?xml version="1.0"?>
<package format="3">
  <name>video_recorder</name>
  <version>0.1.0</version>
  <description>
    Captures OAK-D LR video, publishes raw frames on /video_frames, records raw AVI.
    Simultaneously, subscribes to /video_frames and /telemetry (from Teensy),
    overlays steering/throttle on each frame, and writes an annotated AVI.
  </description>

  <maintainer email="you@example.com">Your Name</maintainer>
  <license>Apache-2.0</license>

  <!-- Build tool -->
  <buildtool_depend>ament_python</buildtool_depend>

  <!-- ROS 2 dependencies -->
  <depend>rclpy</depend>
  <depend>cv_bridge</depend>
  <depend>sensor_msgs</depend>
  <depend>std_msgs</depend>
  <depend>depthai</depend>
  <depend>numpy</depend>
  <depend>opencv_python</depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
